Init java 11 update. builds without tests. does not start